<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/phoneNumberTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone_number_title" />


        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/my_number"
            android:inputType="phone"
            android:text="@string/my_number" />

        <TextView
            android:id="@+id/smsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sms_text_title" />

        <EditText
            android:id="@+id/editTextSms"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/sms_text_default"
            android:inputType="text"
            android:text="@string/sms_text_default"
            />



        <Button
            android:id="@+id/callBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/colorCallBtn"
            android:text="@string/call_btn_title" />

        <Button
            android:id="@+id/smsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/colorSmsBtn"
            android:text="@string/sms_btn_title" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>